# mail_status

./: Makefile  README.md  pyproject.toml
src/: main.py
src/mail_stats/: __init__.py
tests/: test_first.py
