[tool.poetry]
name = "mail_status"
version = "0.1.0"
description = ""
authors = ["Thomas Harrison <theharrisoncrafter@gmail.com>"]
readme = "README.md"

packages = [{ include = "mail_status", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.14"
loguru = "^0.7.3"
apprise = "^1.9.3"
click = "^8.1.8"

[tool.poetry.group.dev.dependencies]
ruff = "^0.8.4"

[tool.poetry.scripts]
mail_status = "mail_status:cli"

[tool.ruff.lint]
extend-select = ["I"]
ignore = ["F401"]

[tool.ruff.format]
quote-style = "single"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
